--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('register_thanks') }}">
 {{ form_widget(form) }}
-    <input type="submit" />
+    <input type="submit" id="Register" />
 </form>
